# espresso-sequencer

./: .docker-compose.yaml.swp  .dockerignore  .env  .env.contracts.example  .env.lightweight  .envrc  .gas-snapshot  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc.yml  .solhint.json  .typos.toml  404.html  CNAME  CODEOWNERS  Cargo.toml  Makefile  README.md  crates.js  cross-shell.nix  docker-compose-anvil.yaml  docker-compose-demo.yaml  docker-compose-example-l2.yaml  docker-compose-geth.yaml  docker-compose.yaml  flake.nix  foundry.toml  gas-benchmarks.txt  genesis-l1.json  genesis.json  help.html  hotshot.just  index.html  jest.config.js  justfile  libp2p-bootstrap.toml.example  package.json  permissionless-docker-compose.yaml  (+17 more)
builder/: Cargo.toml  all.html  fn.run_builder_api_service.html  index.html  main.rs  sidebar-items.js
builder/non_permissioned/: fn.build_instance_state.html  index.html  sidebar-items.js  struct.BuilderConfig.html
builder/permissioned/: fn.init_hotshot.html  fn.init_node.html  index.html  sidebar-items.js  struct.BuilderContext.html
builder/src/: lib.rs  main.rs  non_permissioned.rs  permissioned.rs
client/: Cargo.toml  all.html  index.html  sidebar-items.js  struct.SequencerClient.html  type.FeeMerkleProof.html  type.SequencerApiVersion.html
client/src/: lib.rs
contract-bindings/: Cargo.toml  README.md
contract-bindings-ethers/: Cargo.toml
contract-bindings-ethers/src/: erc1967_proxy.rs  fee_contract.rs  i_plonk_verifier.rs  lib.rs  light_client.rs  light_client_arbitrum.rs  light_client_mock.rs  light_client_state_update_vk.rs  light_client_state_update_vk_mock.rs  permissioned_stake_table.rs  plonk_verifier.rs  plonk_verifier_2.rs  shared_types.rs  stake_table.rs
contract-bindings/artifacts/: LightClient.json  LightClientArbitrum_bytecode.json  LightClientMock_abi.json  LightClientMock_bytecode.json  LightClient_abi.json  LightClient_bytecode.json
contract-bindings/examples/: deploy.rs
contract-bindings/src/: abstract_stake_table.rs  address.rs  beacon_proxy.rs  bls_helper.rs  bls_sig.rs  bls_sig_test.rs  bn254.rs  bn256g2.rs  box_v1.rs  box_v2.rs  bytes_lib.rs  call_new_finalized_state.rs  common_base.rs  console.rs  console_2.rs  context.rs  context_upgradeable.rs  contract.rs  defender.rs  defender_deploy.rs  demo_box_v1.rs  demo_box_v2.rs  deploy.rs  deploy_box.rs  deploy_fee_contract.rs  deploy_hot_shot.rs  deploy_light_client.rs  deploy_uups_contract.rs  ds_test.rs  ed_on_bn254.rs  erc1967_proxy.rs  erc1967_utils.rs  erc20.rs  example_rollup.rs  example_token.rs  fee_contract.rs  fee_contract_test.rs  fee_contract_upgradability_test.rs  fee_contract_v2.rs  hot_shot.rs  (+106 more)
contracts/rust/: Cargo.toml
crates/hotshot-fakeapi/: Cargo.toml
example-l2/: Cargo.toml  README.md
example-l2/src/: api.rs  api.toml  error.rs  executor.rs  lib.rs  main.rs  prover.rs  seed.rs  state.rs  transaction.rs  utils.rs
hermez-adaptor/: Cargo.toml
hermez-adaptor/src/: demo.rs  hermez.rs  json_rpc.rs  lib.rs  main.rs  query_api.toml  query_service.rs  sequencer.rs
hermez-adaptor/tests/: end_to_end.rs  permissionless_sequencer_example.rs
hotshot/: Cargo.toml  all.html  constant.H_256.html  constant.H_512.html  enum.HotShotError.html  fn.load_start_epoch_info.html  index.html  sidebar-items.js  struct.DoubleTwinsHandler.html  struct.HotShotInitializer.html  struct.InitializerEpochInfo.html  struct.MarketplaceConfig.html  struct.RandomTwinsHandler.html  struct.SystemContext.html  trait.TwinsHandlerState.html  type.Channel.html
hotshot-builder-api/: Cargo.toml
hotshot-builder-api/src/: api.rs
hotshot-events-service/: .gitignore  Cargo.toml  LICENSE  flake.nix
hotshot-events-service/.github/: dependabot.yml
hotshot-events-service/api/: hotshot_events.toml
hotshot-events-service/src/: events.rs  events_source.rs  test.rs
hotshot-state-prover/: Cargo.toml
hotshot-state-prover/api/: prover-service.toml
hotshot-state-prover/src/: circuit.rs  lib.rs  mock_ledger.rs  proof.rs  service.rs  snark.rs  state.rs  test_utils.rs
hotshot-task/: Cargo.toml
hotshot-task/src/: dependency.rs  dependency_task.rs  task.rs
hotshot/documentation/: index.html
hotshot/helpers/: fn.initialize_logging.html  index.html
hotshot/src/: lib.rs  traits.rs
hotshot/tasks/: enum.GlobalEvent.html  fn.add_consensus_tasks.html  fn.add_network_event_task.html  fn.add_network_event_tasks.html  fn.add_network_message_and_request_receiver_tasks.html  fn.add_network_message_task.html  fn.add_network_tasks.html  fn.add_queue_len_task.html  fn.add_request_network_task.html  fn.add_response_task.html  fn.create_shutdown_event_monitor.html  index.html  trait.EventTransformerState.html
hotshot/traits/: enum.NetworkError.html  (+7 more)
inscriptions/: Cargo.toml
legacy/: Cargo.toml
marketplace/: Cargo.toml
marketplace-builder/: Cargo.toml
marketplace-builder-shared/: Cargo.toml
marketplace-solver/: Cargo.toml
node-metrics/: Cargo.toml
request-response/: Cargo.toml
sequencer/: Cargo.toml  all.html  build.rs  enum.Error.html  fn.empty_builder_commitment.html  fn.init_node.html  fn.main.html  index.html  sidebar-items.js  struct.BlockBuildingSnafu.html  struct.ChainConfig.html  struct.GenesisWrongSizeSnafu.html  struct.Header.html  struct.IncorrectParentSnafu.html  struct.IncorrectViewSnafu.html  struct.L1Params.html  struct.MerkleTreeSnafu.html  struct.MissingGenesisSnafu.html  struct.NetworkParams.html  struct.Node.html  struct.NodeState.html  struct.SeqTypes.html  struct.UnexpectedGenesisSnafu.html  type.Event.html  type.Leaf.html  type.PrivKey.html  type.PubKey.html  type.SequencerApiVersion.html
sequencer-sqlite/: Cargo.toml
shared/: Cargo.toml
tests/: Cargo.toml  demo_native.rs  main.rs  smoke.rs  upgrades.rs
types/: Cargo.toml  README.md
utils/: Cargo.toml  all.html  enum.Command.html  fn.main.html  index.html  sidebar-items.js  struct.Options.html
vid/: Cargo.toml  all.html  enum.VidError.html  index.html  sidebar-items.js  trait.VidScheme.html  type.VerificationResult.html  type.VidResult.html
zkevm/: Cargo.toml
(+7154 files in other folders)
