[workspace.package]
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[workspace]

resolver = "2"

members = [
    "builder",
    "client",
    "contract-bindings-alloy",
    "contract-bindings-ethers",
    "contracts/rust/adapter",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "ethers-conv",
    "hotshot-events-service",
    "hotshot-state-prover",
    "marketplace-builder",
    "marketplace-solver",
    "node-metrics",
    "sequencer",
    "tests",
    "types",
    "utils"
]

exclude = ["sequencer-sqlite"]

[workspace.dependencies]
alloy = { version = "0.9", default-features = false, features = [
    "rpc",
    "transports",
    "eips",
    "providers",
    "rpc-client",
    "json-rpc",
    "rpc-types",
    "provider-ws",
    "sol-types",
    "contract",
    "reqwest",
    "signer-local",
    "signers"
] }
anyhow = "^1.0"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-srs = "0.3.1"
async-broadcast = "0.7.0"
async-channel = "2"
async-lock = "3"
async-once-cell = "0.5"
async-trait = "0.1"
base64 = "0.22"
base64-bytes = "0.1"
bincode = "1.3.3"
bitvec = "1.0.1"
blake3 = "1.5"
circular-buffer = "0.1.9"
clap = { version = "4.4", features = ["derive", "env", "string"] }
cld = "0.5"
chrono = { version = "0.4", features = ["serde"] }
either = "1"
hex = "0.4"
sha2 = "0.10"
derive_more = { version = "1.0", features = ["full"] }
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["solc", "ws"] }
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "sync",
] }
tracing-subscriber = "0.3"
tracing-test = "0.1"
num_cpus = "1"

hotshot = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }

# Builder imports
marketplace-builder-core = { path = "marketplace-builder-core" }
marketplace-builder-shared = { path = "marketplace-builder-shared" }
hotshot-builder-core = { path = "hotshot-builder-core" }

# Hotshot imports
hotshot-builder-api = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-task-impls = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-macros = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-events-service = { path = "hotshot-events-service" }
hotshot-orchestrator = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-query-service = { path = "hotshot-query-service" }
hotshot-stake-table = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-state-prover = { version = "0.1.0", path = "hotshot-state-prover" }
hotshot-task = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-testing = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-types = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
libp2p-networking = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }
hotshot-contract-adapter = { version = "0.1.0", path = "contracts/rust/adapter" }
# Temporary, used to pull in the mock auction results provider
hotshot-example-types = { git = "https://github.com/EspressoSystems/hotshot", tag = "0.5.84" }

# Push CDN imports
cdn-broker = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.1-upgrade", package = "cdn-broker" }
cdn-marshal = { git = "https://github.com/EspressoSystems/Push-CDN", tag = "0.5.1-upgrade", package = "cdn-marshal" }

jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-plonk-v0.5.1", features = [
    "test-apis",
] }
jf-crhf = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-merkle-tree = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
] }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.2.0", features = [
    "std",
] }
jf-pcs = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-vid = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-rescue = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
libp2p = { version = "0.53", default-features = false }
log-panics = { version = "2.0", features = ["with-backtrace"] }
lru = "0.12"
strum = { version = "0.26", features = ["derive"] }
surf-disco = "0.9"
sqlx = "=0.8.2"
tagged-base64 = "0.4"
tide-disco = "0.9.3"
thiserror = "1.0.69"
tracing = "0.1"
bytesize = "1.3"
itertools = "0.12"
priority-queue = "2"
rand_chacha = "0.3"
rand_distr = "0.4"
reqwest = "0.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "^1.0.113"
tempfile = "3.10"
toml = "0.8"
url = "2.3"
vbs = "0.1"
vec1 = "1.12"
vergen = { version = "8.3", features = ["git", "gitcl"] }
zeroize = "1.7"
committable = "0.2"
portpicker = "0.1.1"
pretty_assertions = "1.4"
static_assertions = "1.1"
num-traits = "0.2"
derivative = "2.2"
paste = "1.0"
rand = "0.8.5"
time = "0.3"
trait-set = "0.3.0"

[profile.dev]
# No optimizations
opt-level = 0
# Skip compiling the debug information.
debug = false
# Skip linking symbols.
strip = true
[profile.test]
opt-level = 1
[profile.test.package.tests]
opt-level = 0
[profile.test.package.client]
opt-level = 0
[profile.test.package.hotshot-state-prover]
opt-level = 3
