[workspace.package]
version = "0.1.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
edition = "2021"

[workspace]

resolver = "2"

members = [
    "crates/builder",
    "crates/client",
    "crates/contract-bindings-alloy",
    "crates/contract-bindings-ethers",
    "contracts/rust/adapter",
    "contracts/rust/diff-test",
    "contracts/rust/gen-vk-contract",
    "crates/ethers-conv",
    "crates/hotshot",
    "crates/hotshot-builder-api",
    "crates/hotshot-builder-core",
    "crates/hotshot-builder-core-refactored",
    "crates/hotshot-events-service",
    "crates/hotshot-example-types",
    "crates/hotshot-examples",
    "crates/hotshot-fakeapi",
    "crates/hotshot-libp2p-networking",
    "crates/hotshot-macros",
    "crates/hotshot-orchestrator",
    "crates/hotshot-query-service",
    "crates/hotshot-stake-table",
    "crates/hotshot-state-prover",
    "crates/hotshot-state-prover",
    "crates/hotshot-task",
    "crates/hotshot-task-impls",
    "crates/hotshot-testing",
    "crates/hotshot-types",
    "crates/hotshot-utils",
    "crates/marketplace-builder",
    "crates/marketplace-solver",
    "crates/node-metrics",
    "crates/request-response",
    "crates/sequencer",
    "crates/tests",
    "crates/types",
    "crates/utils"
]

exclude = ["sequencer-sqlite"]

[workspace.dependencies]
contract-bindings-alloy = { path = "./crates/contract-bindings-alloy" }
contract-bindings-ethers = { path = "./crates/contract-bindings-ethers" }
ethers-conv = { path = "./crates/ethers-conv" }
alloy = { version = "0.9", default-features = false, features = [
    "contract",
    "eips",
    "json-rpc",
    "provider-ws",
    "providers",
    "reqwest",
    "rpc",
    "rpc-client",
    "rpc-types",
    "signer-local",
    "signer-mnemonic",
    "signers",
    "sol-types",
    "transports",
] }
anyhow = "^1.0"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ed-on-bn254 = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-srs = "0.3.1"
async-broadcast = "0.7.0"
async-channel = "2"
async-lock = "3"
async-once-cell = "0.5"
async-trait = "0.1"
base64 = "0.22"
base64-bytes = "0.1"
bincode = "1.3.3"
bitvec = { version = "1", features = ["serde"] }
blake3 = "1.5"
circular-buffer = "0.1.9"
clap = { version = "4.4", features = ["derive", "env", "string"] }
cld = "0.5"
chrono = { version = "0.4", features = ["serde"] }
either = "1"
hex = "0.4"
sha2 = "0.10"
derive_more = { version = "1.0", features = ["full"] }
es-version = { git = "https://github.com/EspressoSystems/es-version.git", branch = "main" }
dotenvy = "0.15"
ethers = { version = "2.0", features = ["solc", "ws"] }
futures = "0.3"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "parking_lot",
    "sync",
] }
libp2p-identity = "0.2"
tower-service = { version = "0.3", default-features = false }
tracing-subscriber = "0.3"
tracing-test = "0.1"
lazy_static = "1"
multiaddr = { version = "0.18" }
serde-inline-default = "0.2"
digest = "0.10"
libp2p-swarm-derive = { version = "0.35" }
typenum = "1"
cbor4ii = { version = "1.0", features = ["serde1"] }
serde_bytes = { version = "0.11" }
num_cpus = "1"
dashmap = "6"
memoize = { version = "0.4", features = ["full"] }
derive_builder = "0.20"
parking_lot = { version = "0.12", features = ["send_guard"] }
primitive-types = { version = "0.12.2", default-features = false, features = [
    "serde",
] }

# Builder imports
marketplace-builder-core = { path = "./crates/marketplace-builder-core" }
marketplace-builder-shared = { path = "./crates/marketplace-builder-shared" }
hotshot-builder-core = { path = "./crates/hotshot-builder-core" }

# Hotshot imports
hotshot = { path = "./crates/hotshot" }
hotshot-builder-api = { path = "./crates/hotshot-builder-api" }
hotshot-task-impls = { path = "./crates/hotshot-task-impls" }
hotshot-macros = { path = "./crates/hotshot-macros" }
hotshot-events-service = { path = "./crates/hotshot-events-service" }
hotshot-utils = { path = "./crates/hotshot-utils" }
hotshot-orchestrator = { path = "./crates/hotshot-orchestrator" }
hotshot-query-service = { path = "./crates/hotshot-query-service" }
hotshot-stake-table = { path = "./crates/hotshot-stake-table" }
hotshot-state-prover = { version = "0.1.0", path = "./crates/hotshot-state-prover" }
hotshot-task = { path = "./crates/hotshot-task" }
hotshot-testing = { path = "./crates/hotshot-testing" }
hotshot-types = { path = "./crates/hotshot-types" }
hotshot-libp2p-networking = { path = "./crates/hotshot-libp2p-networking" }
hotshot-contract-adapter = { path = "./contracts/rust/adapter" }
# Temporary, used to pull in the mock auction results provider
hotshot-example-types = { path = "./crates/hotshot-example-types" }

jf-plonk = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-plonk-v0.5.1", features = [
    "test-apis",
] }
jf-crhf = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
jf-merkle-tree = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
] }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.2.0", features = [
    "std",
] }
jf-pcs = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-vid = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-rescue = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
    "parallel",
] }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = [
    "std",
] }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5" }
libp2p = { package = "libp2p", version = "0.54", default-features = false, features = [
    "macros",
    "autonat",
    "cbor",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "quic",
    "request-response",
    "secp256k1",
    "serde",
] }
log-panics = { version = "2.0", features = ["with-backtrace"] }
lru = "0.12"
strum = { version = "0.26", features = ["derive"] }
surf-disco = "0.9"
sqlx = "=0.8.2"
tagged-base64 = "0.4"
tide-disco = "0.9.3"
thiserror = "1.0.69"
tracing = "0.1"
bytesize = "1.3"
itertools = "0.12"
priority-queue = "2"
rand_chacha = "0.3"
rand_distr = "0.4"
reqwest = "0.12"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "^1.0.113"
tempfile = "3.10"
toml = "0.8"
url = "2.3"
vbs = "0.1"
vec1 = { version = "1", features = ["serde"] }
vergen = { version = "8.3", features = ["git", "gitcl"] }
zeroize = "1.7"
committable = "0.2"
portpicker = "0.1.1"
pretty_assertions = "1.4"
static_assertions = "1.1"
num-traits = "0.2"
derivative = "2.2"
paste = "1.0"
rand = "0.8.5"
time = "0.3"
trait-set = "0.3.0"

[profile.dev]
# No optimizations
opt-level = 0
# Skip compiling the debug information.
debug = false
# Skip linking symbols.
strip = true
[profile.test]
opt-level = 1
[profile.test.package.tests]
opt-level = 0
[profile.test.package.client]
opt-level = 0
[profile.test.package.hotshot-state-prover]
opt-level = 3
