[package]
name = "builder"
description = "A standalone builder service"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
default = ["libp2p"]
libp2p = ["sequencer/libp2p"]

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-compatibility-layer = { workspace = true }
async-lock = "2.2"
async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
committable = { workspace = true }
dotenvy = { workspace = true }
espresso-types = { path = "../types", version = "*", features = ["testing"] }
ethers = { workspace = true }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-builder-core = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-orchestrator = { workspace = true }
hotshot-stake-table = { workspace = true }
hotshot-state-prover = { path = "../hotshot-state-prover", version = "*" }
hotshot-types = { workspace = true }
jf-merkle-tree = { workspace = true }
jf-signature = { workspace = true, features = ["bls"] }
libp2p = { workspace = true }
portpicker = { workspace = true }
rand = "0.8.5"
sequencer = { path = "../sequencer", features = ["testing"], version = "*" }
sequencer-utils = { path = "../utils" }
serde = { workspace = true }
surf = "2.3.1"
surf-disco = { workspace = true }
tide-disco = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }

[dev-dependencies]
sequencer = { path = "../sequencer", features = ["testing"], version = "*" }
tempfile = "3.10.1"
