[package]
name = "builder"
description = "A standalone builder service"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
committable = { workspace = true }
dotenvy = { workspace = true }
espresso-types = { path = "../types" }
ethers = { workspace = true }
futures = { workspace = true }
hotshot = { workspace = true }
hotshot-builder-api = { workspace = true }
hotshot-builder-core = { workspace = true }
hotshot-events-service = { workspace = true }
hotshot-example-types = { workspace = true }
hotshot-orchestrator = { workspace = true }
hotshot-stake-table = { workspace = true }
hotshot-state-prover = { path = "../hotshot-state-prover" }
hotshot-types = { workspace = true }
libp2p = { workspace = true }
libp2p-networking = { workspace = true }
marketplace-builder-shared = { workspace = true }
portpicker = { workspace = true }
rand = "0.8.5"
sequencer = { path = "../sequencer" }
sequencer-utils = { path = "../utils" }
serde = { workspace = true }
surf = "2.3.1"
surf-disco = { workspace = true }
tide-disco = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vbs = { workspace = true }
vec1 = { workspace = true }

[dev-dependencies]
jf-signature = { workspace = true, features = ["bls"] }
sequencer = { path = "../sequencer", features = ["testing"] }
tempfile = { workspace = true }
