[package]
name = "contract-bindings-ethers"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2", default-features = false, features = ["abigen"] }
serde = "1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
