[package]
name = "contract-bindings"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.0.1", features = ["logging-utils", "async-std-executor", "channel-async-std"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
async-trait = "0.1.63"
ethers = { version = "2.0.3", features = ["abigen"] }
ethers-solc = "2.0.3"
glob = "0.3.1"
hex = "0.4.3"
serde_json = "1.0.91"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
