[package]
name = "example-l2"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
ethers = "2.0.1"
ethers-core = "2.0.1"
futures = "0.3.28"
rand = "0.8.5"
sequencer = { path = "../sequencer" }
serde = "1.0.159"
serde_json = "1.0.95"
snafu = "0.7.4"
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.0" }
toml = "0.5"

[dev-dependencies]
portpicker = "0.1.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.0" }
