[package]
name = "example-l2"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.3.0", features = ["derive"] }
async-compatibility-layer = { git = "https://github.com/EspressoSystems/async-compatibility-layer", tag = "1.2.0" }
async-std = { version = "1.12", features = ["attributes"] }
clap = "4.3.10"
commit = { git = "https://github.com/EspressoSystems/commit", tag = "0.2.2" }
contract-bindings = { path = "../contract-bindings" }
derive_more = "0.99.17"
ethers = { version = "2.0.4", features = ["ws"] }
futures = "0.3.28"
hotshot-query-service = { git = "ssh://git@github.com/EspressoSystems/hotshot-query-service.git" }
jf-primitives = { git = "https://github.com/EspressoSystems/jellyfish", features = [
    "std",
] }
rand = "0.8.5"
rand_chacha = "0.3"
sequencer = { path = "../sequencer", features = ["testing"] }
sequencer-utils = { path = "../utils" }
serde = "1.0.163"
serde_json = "1.0.97"
snafu = "0.7.4"
strum = "0.25.0"
strum_macros = "0.25.1"
surf-disco = { git = "https://github.com/EspressoSystems/surf-disco", tag = "v0.4.1" }
tide-disco = { git = "https://github.com/EspressoSystems/tide-disco", tag = "v0.4.1" }
toml = "0.5"
tracing = "0.1"

[dev-dependencies]
portpicker = "0.1.1"
sequencer-utils = { path = "../utils" }
tempfile = "3.4.0"
