[package]
name = "hotshot-builder-api"
version = "0.1.7"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
committable = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
futures = { workspace = true }
hotshot-types = { workspace = true }
serde = { workspace = true }
tagged-base64 = { workspace = true }
thiserror = { workspace = true }
tide-disco = { workspace = true }
toml = { workspace = true }
vbs = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
