[package]
name = "hotshot-state-prover"
description = "Generate state update proof for HotShot light client"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
async-compatibility-layer = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
blake3 = "1.5"
clap = { workspace = true }
cld = { workspace = true }
ethers = { workspace = true }
hotshot-stake-table = { workspace = true }
hotshot-types = { workspace = true }
jf-plonk = { workspace = true }
jf-primitives = { workspace = true }
jf-relation = { workspace = true }
jf-utils = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
surf-disco = { workspace = true }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64", tag = "0.3.4" }
tide-disco = { workspace = true }
time = "0.3"
tracing = { workspace = true }
url = { workspace = true }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-ff/std"]
parallel = ["jf-primitives/parallel", "jf-utils/parallel", "ark-ff/parallel"]
